Refactor PhoneHomeMetrics [CORE-90] (#1303)
1. Make the terminology in line with Jet metrics.
    a. Rename MetricsCollector to MetricsProvider.
    b. Rename PhoneHomeParameterCreator to MetricsCollectionContext.
    c. Change `forEachMetric(Node, BiConsumer)` to `provideMetrics(Node, MetricsCollectionContext)`.
2. Move EnterprisePhoneHome and EnterprisePhoneHomeMetrics to 'com.hazelcast.internal.util.phonehome' package.
3. Move CP and new REST metrics to EnterprisePhoneHomeMetrics.
4. Encapsulate hardcoded EnterprisePhoneHome metrics in separate metrics providers.
5. Use ServiceLoader to make metrics providers pluggable.

GitOrigin-RevId: 68dabb645f3a3a51a8481cc8dbc310e8ba3c7263